Fix timestamp not showing

--- a/src/main/resources/static/css/clipList.css
+++ b/src/main/resources/static/css/clipList.css
@@ -6,6 +6,7 @@
 .dropdownMenuButton {
     background: none;
     color: Black;
+    border: none;
 }
 
 /* Dropdown-button */
